--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Bookmarks Menu",
+	"name": "Extended Bookmarks Menu",
 	"version": "3.4.0.4",
 	"description": "__MSG_extDescription__",
 	"default_locale": "en",
